[gd_scene load_steps=32 format=3 uid="uid://bkeg2itkwy8vv"]

[ext_resource type="Script" path="res://game.gd" id="1_coqbl"]
[ext_resource type="Environment" uid="uid://d08mq5h5li88u" path="res://space_envirnonment.tres" id="1_yhgbs"]
[ext_resource type="Script" path="res://follow_camera.gd" id="2_ycspp"]
[ext_resource type="Script" path="res://border.gd" id="3_oqhaa"]
[ext_resource type="Script" path="res://background/background.gd" id="4_rndii"]
[ext_resource type="Script" path="res://debug.gd" id="5_kj0qh"]
[ext_resource type="PackedScene" uid="uid://ctji66clv30c1" path="res://entity/debris/debris.tscn" id="6_5pw0f"]
[ext_resource type="AudioStream" uid="uid://cp1omq5nfko4c" path="res://audio/sounds/noise/space_background_noise.mp3" id="7_jcb02"]
[ext_resource type="AudioStream" uid="uid://trl43xdj7qxw" path="res://audio/sounds/noise/space_background_noise_2.mp3" id="8_5p3rr"]
[ext_resource type="PackedScene" uid="uid://dry3qo3lt13bc" path="res://entity/player/player.tscn" id="9_ghdpd"]
[ext_resource type="PackedScene" uid="uid://8buu23xnfxtx" path="res://ui/hud/hud.tscn" id="10_twbui"]
[ext_resource type="Script" path="res://ui.gd" id="11_bfqtc"]
[ext_resource type="PackedScene" uid="uid://dx0665xaf2c0v" path="res://main_menu.tscn" id="11_g6034"]
[ext_resource type="Script" path="res://ui/wave/wave_label.gd" id="12_t4ag5"]
[ext_resource type="PackedScene" uid="uid://dbxqrokenxrj0" path="res://options_menu.tscn" id="12_v5nkk"]
[ext_resource type="PackedScene" uid="uid://b303h11hxvje8" path="res://game_type_menu.tscn" id="13_bpyrg"]
[ext_resource type="Script" path="res://enemy_spawner.gd" id="13_xygu3"]
[ext_resource type="PackedScene" uid="uid://bajngsmhlxlno" path="res://entity/enemy/asteroid/asteroid.tscn" id="14_e4jav"]
[ext_resource type="Texture2D" uid="uid://bebbnyhb7dki3" path="res://ui/social/discord_focus.png" id="14_w2lce"]
[ext_resource type="Script" path="res://wave_handler.gd" id="15_qlug7"]
[ext_resource type="AudioStream" uid="uid://c37b3m4uuer4d" path="res://audio/sounds/wave/new_wave.mp3" id="20_ornc5"]

[sub_resource type="Animation" id="Animation_ewabq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Border:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player/Thruster:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UILayer/MainMenu:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pyrrm"]
resource_name = "loading_main_screen"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(10.556, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Border:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UILayer/MainMenu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Player/Thruster:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("UILayer/MainMenu:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.9),
"transitions": PackedFloat32Array(5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Player/WeaponHolder:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pjpon"]
resource_name = "play"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Thruster:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:controllable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player/Thruster:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-150, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Player/Thruster:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("UILayer/MainMenu:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("UILayer/GameTypeMenu:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Player/WeaponHolder:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_reqnb"]
_data = {
"RESET": SubResource("Animation_ewabq"),
"loading_main_screen": SubResource("Animation_pyrrm"),
"play": SubResource("Animation_pjpon")
}

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_ihvxo"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_cjepr"]
emission_shape = 3
emission_box_extents = Vector3(1920, 1080, 1)
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 10.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_max = 2.0
collision_mode = 1
collision_friction = 0.0
collision_bounce = 1.0
collision_use_scale = true

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_2w7r4"]
streams_count = 2
stream_0/stream = ExtResource("7_jcb02")
stream_0/weight = 1.0
stream_1/stream = ExtResource("8_5p3rr")
stream_1/weight = 1.0

[sub_resource type="Animation" id="Animation_e8jv7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../UILayer/WaveContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_g71k4"]
resource_name = "wave_start"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../UILayer/WaveContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../UILayer/WaveContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fghxg"]
_data = {
"RESET": SubResource("Animation_e8jv7"),
"wave_start": SubResource("Animation_g71k4")
}

[node name="Game" type="Node" node_paths=PackedStringArray("animation_player")]
script = ExtResource("1_coqbl")
animation_player = NodePath("AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_reqnb")
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_yhgbs")
camera_attributes = SubResource("CameraAttributesPractical_ihvxo")

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("target")]
zoom = Vector2(0.75, 0.75)
script = ExtResource("2_ycspp")
min_zoom = 0.75
max_zoom = 0.75
target = NodePath("../Player")

[node name="AdditionalStars" type="GPUParticles2D" parent="Camera2D"]
amount = 1000
process_material = SubResource("ParticleProcessMaterial_cjepr")
lifetime = 10.0
preprocess = 30.0

[node name="Border" type="Node2D" parent="."]
script = ExtResource("3_oqhaa")

[node name="Background" type="ParallaxBackground" parent="." node_paths=PackedStringArray("camera")]
follow_viewport_scale = 10.0
script = ExtResource("4_rndii")
camera = NodePath("../Camera2D")

[node name="FarStars" type="ParallaxLayer" parent="Background"]
z_index = -95
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(3000, 3000)

[node name="Stars" type="ParallaxLayer" parent="Background"]
z_index = -96
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(3000, 3000)

[node name="CloseStars" type="ParallaxLayer" parent="Background"]
z_index = -97
motion_mirroring = Vector2(3000, 3000)

[node name="DebugLayer" type="CanvasLayer" parent="."]
layer = 99

[node name="Debug" type="Node" parent="DebugLayer" node_paths=PackedStringArray("player", "fps", "memory", "nodes", "position", "speed")]
script = ExtResource("5_kj0qh")
player = NodePath("../../Player")
fps = NodePath("Display/MarginContainer/HBoxContainer2/VBoxContainer/Fps")
memory = NodePath("Display/MarginContainer/HBoxContainer2/VBoxContainer/Memory")
nodes = NodePath("Display/MarginContainer/HBoxContainer2/VBoxContainer/Nodes")
position = NodePath("Display/MarginContainer/HBoxContainer2/VBoxContainer2/Position")
speed = NodePath("Display/MarginContainer/HBoxContainer2/VBoxContainer2/Speed")
debris = ExtResource("6_5pw0f")

[node name="Display" type="Control" parent="DebugLayer/Debug"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="DebugLayer/Debug/Display"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer2" type="HBoxContainer" parent="DebugLayer/Debug/Display/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DebugLayer/Debug/Display/MarginContainer/HBoxContainer2"]
layout_mode = 2

[node name="Fps" type="Label" parent="DebugLayer/Debug/Display/MarginContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Fps: %fps%"

[node name="Memory" type="Label" parent="DebugLayer/Debug/Display/MarginContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Memory: %memory%"

[node name="Nodes" type="Label" parent="DebugLayer/Debug/Display/MarginContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Nodes: %nodes%"

[node name="VBoxContainer2" type="VBoxContainer" parent="DebugLayer/Debug/Display/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Position" type="Label" parent="DebugLayer/Debug/Display/MarginContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Position: %position%"
horizontal_alignment = 2

[node name="Speed" type="Label" parent="DebugLayer/Debug/Display/MarginContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Speed: %speed%"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DebugLayer/Debug/Display/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="VBoxContainer" type="HBoxContainer" parent="DebugLayer/Debug/Display/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Randomize" type="Button" parent="DebugLayer/Debug/Display/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Randomize Planet"

[node name="Drebis" type="Button" parent="DebugLayer/Debug/Display/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Spawn Debris"

[node name="AddLevelPoint" type="Button" parent="DebugLayer/Debug/Display/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Add Level Point"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_2w7r4")
volume_db = -10.0
pitch_scale = 0.71
autoplay = true
max_polyphony = 2

[node name="Player" parent="." node_paths=PackedStringArray("border") instance=ExtResource("9_ghdpd")]
border = NodePath("../Border")

[node name="Thruster" parent="Player" index="6"]
position = Vector2(0, 0)
scale = Vector2(0.2, 0.2)

[node name="UILayer" type="CanvasLayer" parent="." node_paths=PackedStringArray("animation_player", "main_menu", "game_type_menu", "options_menu", "hud", "wave_handler", "border")]
script = ExtResource("11_bfqtc")
animation_player = NodePath("../AnimationPlayer")
main_menu = NodePath("MainMenu")
game_type_menu = NodePath("GameTypeMenu")
options_menu = NodePath("OptionsMenu")
hud = NodePath("Hud")
wave_handler = NodePath("../WaveHandler")
border = NodePath("../Border")

[node name="Version" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UILayer/Version"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/Version/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="UILayer/Version/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Linux Game Jam Release v0.0.0.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaveContainer" type="Control" parent="UILayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WaveLabel" type="RichTextLabel" parent="UILayer/WaveContainer" node_paths=PackedStringArray("wave_handler")]
clip_contents = false
layout_mode = 2
offset_top = 480.0
offset_right = 1920.0
offset_bottom = 599.0
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/normal_font_size = 85
bbcode_enabled = true
text = "[center][u]Wave 1[/u]"
fit_content = true
scroll_active = false
script = ExtResource("12_t4ag5")
wave_handler = NodePath("../../../WaveHandler")

[node name="Hud" parent="UILayer" node_paths=PackedStringArray("player") instance=ExtResource("10_twbui")]
visible = false
player = NodePath("../../Player")

[node name="MainMenu" parent="UILayer" instance=ExtResource("11_g6034")]
process_mode = 3
visible = false

[node name="Discord" parent="UILayer/MainMenu/MarginContainer/HBoxContainer2" index="0"]
texture_focused = ExtResource("14_w2lce")

[node name="GameTypeMenu" parent="UILayer" instance=ExtResource("13_bpyrg")]
process_mode = 3
visible = false

[node name="OptionsMenu" parent="UILayer" instance=ExtResource("12_v5nkk")]
process_mode = 3
visible = false

[node name="EnemySpawner" type="Node" parent="." node_paths=PackedStringArray("border", "player")]
script = ExtResource("13_xygu3")
border = NodePath("../Border")
avoid_radius = 1000.0
enemy_scene = ExtResource("14_e4jav")
player = NodePath("../Player")
max_attempts = 8

[node name="WaveHandler" type="Node" parent="." node_paths=PackedStringArray("enemy_spawner", "wave_player")]
script = ExtResource("15_qlug7")
enemy_spawner = NodePath("../EnemySpawner")
wave_start_sound = ExtResource("20_ornc5")
wave_player = NodePath("WavePlayer")

[node name="WavePlayer" type="AnimationPlayer" parent="WaveHandler"]
libraries = {
"": SubResource("AnimationLibrary_fghxg")
}

[connection signal="pressed" from="DebugLayer/Debug/Display/MarginContainer/HBoxContainer/VBoxContainer/Randomize" to="DebugLayer/Debug" method="_on_randomize_pressed"]
[connection signal="pressed" from="DebugLayer/Debug/Display/MarginContainer/HBoxContainer/VBoxContainer/Drebis" to="DebugLayer/Debug" method="_on_drebis_pressed"]
[connection signal="pressed" from="DebugLayer/Debug/Display/MarginContainer/HBoxContainer/VBoxContainer/AddLevelPoint" to="DebugLayer/Debug" method="_on_add_level_point_pressed"]
[connection signal="pressed" from="UILayer/MainMenu/MarginContainer/HBoxContainer2/Discord" to="UILayer" method="_on_discord_pressed"]
[connection signal="pressed" from="UILayer/MainMenu/MarginContainer/VBoxContainer/HBoxContainer/Play" to="UILayer" method="_on_play_pressed"]
[connection signal="pressed" from="UILayer/MainMenu/MarginContainer/VBoxContainer/HBoxContainer/Options" to="UILayer" method="_on_options_pressed"]
[connection signal="pressed" from="UILayer/MainMenu/MarginContainer/VBoxContainer/HBoxContainer/Quit" to="UILayer" method="_on_quit_pressed"]
[connection signal="pressed" from="UILayer/GameTypeMenu/MarginContainer/VBoxContainer/HBoxContainer/Endless" to="UILayer" method="_on_game_type_endless_pressed"]
[connection signal="pressed" from="UILayer/GameTypeMenu/MarginContainer/VBoxContainer/HBoxContainer/Back" to="UILayer" method="_on_game_type_back_pressed"]
[connection signal="pressed" from="UILayer/OptionsMenu/MarginContainer/VBoxContainer/HBoxContainer/Back" to="UILayer" method="_on_options_back_pressed"]

[editable path="Player"]
[editable path="UILayer/Hud"]
[editable path="UILayer/Hud/MarginContainer/HBoxContainer/VBoxContainer/LevelBar"]
[editable path="UILayer/MainMenu"]
[editable path="UILayer/GameTypeMenu"]
[editable path="UILayer/OptionsMenu"]
